src/objects/Apttus_Base2__UIComponentConfigurationPrivate__c.object
<CustomObject>
    <description>Saved view for standard object which will store List of fields, search filters, freeze column, group etc for the grid.</description>
    <fields>
        <fullName>Apttus_Base2__Config__c</fullName>
        <description>Configuration for grid and other components. The format is JSON.</description>
        <label>Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ConfigurationId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component Configuration</label>
        <referenceTo>Apttus_Base2__UIComponentConfiguration__c</referenceTo>
        <relationshipLabel>Component Configuration</relationshipLabel>
        <relationshipName>ComponentConfiguration</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>default view for each user</description>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Apttus UI Component Config Private</label>
    <listViews>
        <fullName>Apttus_Base2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Base2__IsDefault__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apttus UI Component Config Private</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>